Implemented authentication
